--- a/src/css/index.less
+++ b/src/css/index.less
@@ -6,13 +6,14 @@
 @import 'app/variables';
 @import 'app/mixins';
 @import 'app/layout';
+@import 'app/top';
 @import 'app/base';
 @import 'app/colors';
 @import 'app/animations';
 @import 'app/typo';
 @import 'app/icons';
 @import 'app/messages';
-@import 'app/main-menu';
+@import 'app/home-menu';
 @import 'app/settings-menu';
 @import 'app/pages';
 @import 'app/forms';
@@ -26,7 +27,7 @@
 @import 'app/tables';
 
 
-@import 'app/home';
+@import 'app/home-menu';
 @import 'app/edit';
 @import 'app/slideshow';
 @import 'app/slideshow-transitions';
