--- a/src/html/partials/settings/slideshow/slideshow.html
+++ b/src/html/partials/settings/slideshow/slideshow.html
@@ -1,4 +1,4 @@
-<h2>{{'SETTINGS_TITLE_SLIDESHOW' | translate}}</h2>
+<h2>{{'NAVI_SLIDESHOW' | translate}}</h2>
 <div class="settings__block">
   <div class="settings__item">
     <div class="settings__item-label">Ken-Burns</div>
@@ -31,7 +31,7 @@
 
 <div class="settings__block" data-ng-if="appSettings.slideshowTransitionEffect != 0">
   <div class="settings__item">
-    <div class="settings__item-label">Dauer</div>
+    <div class="settings__item-label">{{'LABEL_SLIDESHOW_DELAY' | translate}}</div>
     <div class="settings__item-value"></div>
 
     <div class="settings__item-info">
