--- a/src/html/partials/get-gallery/index.html
+++ b/src/html/partials/get-gallery/index.html
@@ -1,6 +1,7 @@
 <div class="top">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
+    <h1 class="top__title">{{'HOME_MENU_SUBSCRIBE_TITLE' | translate}}</h1>
+    <span class="top__icon-back icon-back" data-ng-click="go('home', 'slide-right')"></span>
     <span class="float-right" data-ng-click="go('/settings', 'slide-left')">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
