--- a/src/html/partials/global/top-inner.html
+++ b/src/html/partials/global/top-inner.html
@@ -1,5 +1,5 @@
 <div class="top__inner">
-  <span class="top-icon-back icon-back" data-ng-click="back()"></span>
+  <span class="top__icon-back icon-back" data-ng-click="back()"></span>
   <span class="float-right" data-ng-click="go('/settings', 'slide-left')">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
