--- a/src/html/partials/settings/account/reset-pwd.html
+++ b/src/html/partials/settings/account/reset-pwd.html
@@ -1,7 +1,7 @@
-<h2>Reset password</h2>
+<h2>{{'TITLE_CHANGE_PASSWORD' | translate}}</h2>
 
-<p>Here you can reset your the password of your SharedPhotoFrame account.</p>
-<p>Enter the email address you signed up with and choose new password.</p>
+<p>{{'INFO_CHANGE_PASSWORD' | translate}}</p>
+<p>{{'DESC_CHANGE_PASSWORD' | translate}}</p>
 
 <div data-ng-if="resetPwdStep == 1" data-ng-include="'html/partials/settings/account/reset-pwd-1.html'"></div>
 <div data-ng-if="resetPwdStep == 2" data-ng-include="'html/partials/settings/account/reset-pwd-2.html'"></div>
