--- a/src/html/partials/settings/gallery.html
+++ b/src/html/partials/settings/gallery.html
@@ -1,35 +1,35 @@
-<h2>{{'SETTINGS_TITLE_GALLERY' | translate}}</h2>
+<h2>{{'NAVI_GALLERY' | translate}}</h2>
 
 <div class="settings">
   <div class="settings__block">
     <div class="settings__item" data-ng-click="showUpgradeInfo(0)">
-      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_MAX_GALLERIES' | translate}}</span>
+      <span class="settings__item-label">{{'LABEL_MAX_GALLERIES' | translate}}</span>
       <span class="settings__item-action">{{appSettings.maxGalleries}}</span>
       </span>
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[0]">
-        <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span class="settings__item-info-label">{{'INFO_LIMIT_UPGRADE' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'NAVI_GO_UPGRADE' | translate}}</span>
       </div>
     </div>
     <div class="settings__item" data-ng-click="showUpgradeInfo(1)">
-      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_MAX_PHOTOS' | translate}}</span>
+      <span class="settings__item-label">{{'LABEL_MAX_PHOTOS' | translate}}</span>
       <span class="settings__item-action">{{appSettings.maxPhotos}}</span>
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[1]">
-        <span class="settings__item-info-label">{{'UPGRADE_LIMIT_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span class="settings__item-info-label">{{'INFO_LIMIT_UPGRADE' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'NAVI_GO_UPGRADE' | translate}}</span>
       </div>
     </div>
     <div class="settings__item" data-ng-click="showUpgradeInfo(2)">
-      <span class="settings__item-label">{{'SETTINGS_ACCOUNT_ALLOW_FOREIGN_UPLOADS' | translate}}</span>
+      <span class="settings__item-label">{{'LABEL_ALLOW_FOREIGN_UPLOADS' | translate}}</span>
       <span class="settings__item-action">
-        <span data-ng-if="appSettings.allowForeignUploads">{{'OPTIONS_ON' | translate}}</span>
-        <span data-ng-if="!appSettings.allowForeignUploads">{{'OPTIONS_OFF' | translate}}</span>
+        <span data-ng-if="appSettings.allowForeignUploads">{{'LABEL_ON' | translate}}</span>
+        <span data-ng-if="!appSettings.allowForeignUploads">{{'LABEL_OFF' | translate}}</span>
       </span>
 
       <div class="settings__item-info" data-ng-if="showUpgradeInfo[2]">
-        <span>{{'SETTINGS_ACCOUNT_ALLOW_FOREIGN_UPLOADS_DESCRIPTION' | translate}}</span><br>
-        <span class="settings__item-info-label">{{'UPGRADE_FEATURE_INFO' | translate}}</span>
-        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'UPGRADE_LABEL_GO_TO' | translate}}</span>
+        <span>{{'DESC_ALLOW_FOREIGN_UPLOADS' | translate}}</span><br>
+        <span class="settings__item-info-label">{{'INFO_FEATURE_UPGRADE' | translate}}</span>
+        <span class="settings__item-info-action" data-ng-click="go('settings/upgrade', '')">{{'NAVI_GO_UPGRADE' | translate}}</span>
       </div>
     </div>
   </div>
