--- a/src/html/partials/settings/upgrade/option1.html
+++ b/src/html/partials/settings/upgrade/option1.html
@@ -1,18 +1,18 @@
-<h2>{{'UPGRADE_FEATURES' | translate}}</h2>
-<h3>{{'UPGRADE_TYPE_LIMIT' | translate}}</h3>
+<h2>{{'LABEL_UPGRADE_LIMITS' | translate}}</h2>
+<p>{{'INFO_NEED_MORE' | translate}}</p>
 <table>
   <tr>
-    <th class="text-left">{{'UPGRADE_DETAILS' | translate}}</th>
-    <th class="text-center">{{'UPGRADE_LABEL_FROM' | translate}}</th>
-    <th class="text-center">{{'UPGRADE_LABEL_TO' | translate}}</th>
+    <th class="text-left">{{'LABEL_DETAILS' | translate}}</th>
+    <th class="text-center">{{'LABEL_FROM' | translate}}</th>
+    <th class="text-center">{{'LABEL_TO' | translate}}</th>
   </tr>
   <tr>
-    <td>{{'SETTINGS_ACCOUNT_MAX_GALLERIES' | translate}}</td>
+    <td>{{'LABEL_MAX_GALLERIES' | translate}}</td>
     <td class="text-center">{{appSettings.maxGalleries}}</td>
     <td class="text-center">{{upgrade1.maxGalleries}}</td>
   </tr>
   <tr>
-    <td>{{'SETTINGS_ACCOUNT_MAX_PHOTOS' | translate}}</td>
+    <td>{{'LABEL_MAX_PHOTOS' | translate}}</td>
     <td class="text-center">{{appSettings.maxPhotos}}</td>
     <td class="text-center">{{upgrade1.maxPhotos}}</td>
   </tr>
@@ -24,22 +24,21 @@
 <p data-ng-if="appSettings.maxGalleries > 1">Thank you for your upgrade!</p>
 <br/>
 
-<h3>{{'UPGRADE_TYPE_FOREIGN_UPLOADS' | translate}}</h3>
-<p>Nach diesem Upgrade können Sie Fotorahmen für die gemeinsame Bearbeitung freigeben. Andere Benutzer können dann ebenfalls
-  Fotos hinzufügen und löschen.</p>
+<h3>{{'LABEL_FEATURE_UPGRADE' | translate}}</h3>
+<p>{{'DESC_UPGRADE_ALLOW_FOREIGN_UPLOADS' | translate}}</p>
 <table>
   <tr>
-    <th class="text-left">{{'UPGRADE_DETAILS' | translate}}</th>
-    <th class="text-center">{{'UPGRADE_LABEL_FROM' | translate}}</th>
-    <th class="text-center">{{'UPGRADE_LABEL_TO' | translate}}</th>
+    <th class="text-left">{{'LABEL_DETAILS' | translate}}</th>
+    <th class="text-center">{{'LABEL_FROM' | translate}}</th>
+    <th class="text-center">{{'LABEL_TO' | translate}}</th>
   </tr>
   <tr>
     <td>Feature: Gemeinsames bearbeiten</td>
     <td class="text-center">
-      <span data-ng-if="appSettings.allowForeignUploads == false">{{'OPTIONS_OFF' | translate}}</span>
-      <span data-ng-if="appSettings.allowForeignUploads == true">{{'OPTIONS_ON' | translate}}</span>
+      <span data-ng-if="appSettings.allowForeignUploads == false">{{'LABEL_OFF' | translate}}</span>
+      <span data-ng-if="appSettings.allowForeignUploads == true">{{'LABEL_ON' | translate}}</span>
     </td>
-    <td class="text-center">{{'OPTIONS_ON' | translate}}</td>
+    <td class="text-center">{{'LABEL_ON' | translate}}</td>
   </tr>
 </table>
 
@@ -47,5 +46,5 @@
   <button class="btn--blue" data-ng-click="onUpgrade2BtnClick()">Buy upgrade for 1.00 €</button>
 </p>
 <p data-ng-if="appSettings.allowForeignUploads == true">
-  Thank you for your upgrade!
+  {{'SUCCESS_THANKS_FOR_UPGRADE' | translate}}
 </p>
