--- a/src/html/partials/share-gallery/sharing.html
+++ b/src/html/partials/share-gallery/sharing.html
@@ -1,16 +1,16 @@
-<h2>{{'TITLE_PHOTOFRAME' | translate}}: {{gallery.title}}</h2>
+<h2>{{'LABEL_GALLERY' | translate}}: {{gallery.title}}</h2>
 
-<p>{{'SHARING_DESCRIPTION' | translate}}</p>
+<p>{{'DESC_SHARING' | translate}}</p>
 
 <div class="settings__block">
   <div class="settings__item">
-    <span class="settings__item-label">{{'SHARING_ACCESS_KEY' | translate}}</span>
+    <span class="settings__item-label">{{'LABEL_ACCESS_KEY' | translate}}</span>
     <span data-ng-if="!showAccessKey"
         data-ng-click="toggleShowAccessKey()"
-        class="settings__item-action">{{'SHARING_SHOW_ACCESS_KEY' | translate}}</span>
+        class="settings__item-action">{{'ACTION_SHOW_ACCESS_CODE' | translate}}</span>
     <span data-ng-if="showAccessKey"
         data-ng-click="toggleShowAccessKey()"
-        class="settings__item-action">{{'SHARING_HIDE_ACCESS_KEY' | translate}}</span>
+        class="settings__item-action">{{'ACTION_HIDE_ACCESS_CODE' | translate}}</span>
 
     <div class="settings__item-info" data-ng-if="showAccessKey">
       <span class="settings__item-info-label">&nbsp;</span>
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="settings__item">
-    <span class="settings__item-label">{{'SHARING_OWNER_USERNAME' | translate}}</span>
+    <span class="settings__item-label">{{'LABEL_USERNAME_AUTHOR' | translate}}</span>
     <span class="settings__item-value">{{gallery.ownerName}}</span>
   </div>
 </div>
@@ -30,6 +30,6 @@
 <div class="settings__block">
   <div class="settings__item">
     <span class="settings__item-label">{{'SHARING_SEND_CREDENTIALS_VIA_EMAIL' | translate}}</span>
-    <a class="settings__item-action" data-ng-click="go('invite', '')">{{'BTN_SEND_EMAIL' | translate}}</a>
+    <a class="settings__item-action" data-ng-click="go('invite', '')">{{'ACTION_SEND_EMAIL' | translate}}</a>
   </div>
 </div>
