--- a/src/html/partials/signin/index.html
+++ b/src/html/partials/signin/index.html
@@ -1,7 +1,8 @@
 <div class="top">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
-    <span class="top-icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
+    <h1 class="top__title">{{'TITLE_SIGNIN' | translate}}</h1>
+    <span class="top__icon-back icon-back" data-ng-click="back()"></span>
+    <span class="top__icon-settings" data-ng-click="go('/settings', 'slide-left', true)">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
   </div>
@@ -11,14 +12,14 @@
   <div class="center__inner text-center">
 
     <form class="form--centered" name="signinForm" data-ng-submit="signinSubmit(signinForm.$valid)" novalidate>
-      <h1 style="line-height:1em;">{{'SIGNIN_TITLE' | translate}}</h1>
 
-      <p>{{'SIGNIN_DESCRIPTION' | translate}}</p>
 
-      <p>{{'SIGNIN_QUESTION' | translate}} <span class="link" data-ng-click="go('login', 'slide-left')">{{'SIGNIN_GO_TO_LOGIN' | translate}}</span></p>
+      <p>{{'INFO_SIGNIN' | translate}}</p>
+
+      <p>{{'SIGNIN_QUESTION' | translate}} <span class="link" data-ng-click="go('login', 'slide-left')">{{'NAVI_GO_LOGIN' | translate}}</span></p>
 
       <div class="form__group">
-        <span class="form__label">{{'SIGNIN_LABEL_PIC_USERNAME' | translate}}</span>
+        <span class="form__label">{{'LABEL_PIC_USERNAME' | translate}}</span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
@@ -48,7 +49,7 @@
       </div>
 
       <div class="form__group">
-        <span class="form__label">{{'SIGNIN_LABEL_EMAIL' | translate}}</span>
+        <span class="form__label">{{'LABEL_EMAIL' | translate}}</span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
@@ -76,7 +77,7 @@
       </div>
 
       <div class="form__group">
-        <span class="form__label">{{'SIGNIN_LABEL_PASSWORD' | translate}}</span>
+        <span class="form__label">{{'LABEL_PASSWORD' | translate}}</span>
 
         <div class="form__ctrl">
           <span class="form__text-input-outer">
@@ -95,7 +96,7 @@
       </div>
 
       <div class="form__ctrl text-right">
-        <button class="btn--blue" type="submit">Continue</button>
+        <button class="btn--blue" type="submit">{{'ACTION_CONTINUE' | translate}}</button>
       </div>
     </form>
   </div>
